--- a/static/styles/less/style.less
+++ b/static/styles/less/style.less
@@ -99,7 +99,7 @@ div.in-text {
 	margin-bottom: 26px;
 }
 
-.collapse {
+.collapse, .collapsing{
 	@media (min-width: @xs-breakpoint) {
 		padding: 10px;
 	}
